# prefect-cicd-example

./: .coveragerc  .dockerignore  CONTRIBUTING.rst  Dockerfile  LICENSE  README.rst  noxfile.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.circleci/: config.yml
.github/: CONTRIBUTING.rst  PULL_REQUEST_TEMPLATE.md
contrib/: prefect-cicd-example-complete.sh
docs/source/: conf.py  readme.rst  usage.rst
docs/source/api/: modules.rst  prefect-cicd-example.core.rst
prefect-cicd-example/: main.py
prefect_cicd_example/: main.py
prefect_cicd_example/cli/: cli.py
tests/: test_prefect-cicd-example.py
