[metadata]
name = prefect_cicd_example
summary = Example for packaging Prefect Flows in a Docker image and deploying to Prefect Cloud via CICD
description-file =
    README.rst
author = Joe Schmid
author-email = 
home-page = http://github.com/joeschmid/prefect-cicd-example
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[files]
data_files =
  etc/bash_completion.d/ = contrib/prefect-cicd-example-complete.sh

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1
warning-is-error = 1

[entry_points]
console_scripts =
    prefect_cicd_example = prefect_cicd_example.cli.cli:cli

[pbr]
builder = html,text
skip_authors = True
skip_changelog = True
all_files = 1

[wheel]
universal = 0

[flake8]
exclude =
  *.egg-info,
  *.pyc,
  .cache,
  .eggs
  .git,
  .tox,
  __pycache__,
  build,
  dist,
  docs/source/conf.py,
  tests/fixtures/*
import-order-style = google
max-complexity = 10
max-line-length = 120

[pydocstyle]
match = (?!test_|__).*\.py
ignore = D106,D202,D203,D212,D213

[tool:pytest]
addopts = --disable-pytest-warnings --disable-warnings -n auto --disable-socket
markers =
  integrations
